--- a/startbootstrap-clean-blog-gh-pages/research.html
+++ b/startbootstrap-clean-blog-gh-pages/research.html
@@ -50,7 +50,7 @@
         <p class="mycontent"> 
             <h1>Conference proceedings</h1>
                 <ul id="ponit">
-                  <li style="color:red">Chen, Shuwen & D. H. Whalen (2017). Acoustic differences between English bunched and retroflex /ɹ/. <i>11th International Seminar on Speech Production. Tianjin, China.</i></li>
+                  <li>Chen, Shuwen & D. H. Whalen (2017). Acoustic differences between English bunched and retroflex /ɹ/. <i>11th International Seminar on Speech Production. Tianjin, China.</i></li>
                   <li>Chen, Shuwen & Peggy Pik Ki Mok. (2015). Question Intonation in Hong Kong English: Interaction between Cantonese and English. <i>18th International Congress of Phonetic Sciences (ICPHS). Glasgow, UK. </i></li>
                 </ul>
             <h1>Conference proceedings</h1>
