--- a/startbootstrap-clean-blog-gh-pages/research.html
+++ b/startbootstrap-clean-blog-gh-pages/research.html
@@ -55,20 +55,20 @@
                 </ul>
             <h1>Conference proceedings</h1>
                 <ul>
-                  <li>Shuwen Chen & Peggy Mok (2017). The production of English rhotics by Mandarin-English bilinguals: articulatory and acoustic data. International Conference on Bilingualism: Language and heritage. The Chinese University of Hong Kong.</li>
-                  <li>Chen, Shuwen, Peggy Pik Ki Mok, Mark Tiede, Wei-rong Chen, D. H. Whalen (2017). An optimization method for correction of ultrasound probe-related contours to head-centric coordinates. 2017 Annual Research Forum of the Linguistic Society of Hong Kong.
+                  <li>Shuwen Chen & Peggy Mok (2017). The production of English rhotics by Mandarin-English bilinguals: articulatory and acoustic data. <i>International Conference on Bilingualism: Language and heritage.</i> The Chinese University of Hong Kong.</li>
+                  <li>Chen, Shuwen, Peggy Pik Ki Mok, Mark Tiede, Wei-rong Chen, D. H. Whalen (2017). An optimization method for correction of ultrasound probe-related contours to head-centric coordinates. <i>2017 Annual Research Forum of the Linguistic Society of Hong Kong.</i>
                     </li>
-                  <li>Chen, Shuwen, Peggy Pik Ki Mok, Mark Tiede, Wei-rong Chen, D. H. Whalen (2017). Investigating the production of Mandarin rhotics using ultrasound imaging. Ultrafest VIII. Potsdam.
+                  <li>Chen, Shuwen, Peggy Pik Ki Mok, Mark Tiede, Wei-rong Chen, D. H. Whalen (2017). Investigating the production of Mandarin rhotics using ultrasound imaging. <i>Ultrafest VIII.</i> Potsdam.
                     </li>
-                  <li>Wei-rong Chen, Mark Tiede, Shuwen Chen (2017). An optimization method for correction of ultrasound probe-related contours to head-centric coordinates. Ultrafest VIII. Potsdam.
+                  <li>Wei-rong Chen, Mark Tiede, Shuwen Chen (2017). An optimization method for correction of ultrasound probe-related contours to head-centric coordinates. <i>Ultrafest VIII.</i> Potsdam.
                     </li>
-                  <li>Chen, Shuwen & Lama, Ziwo. (2016). Tenseness in Northern Yi: An ultrasonic and acoustic study. 5th Joint Meeting of the Acoustical Society of America and the Acoustical Society of Japan. Honolulu, Hawaii.
+                  <li>Chen, Shuwen & Lama, Ziwo. (2016). Tenseness in Northern Yi: An ultrasonic and acoustic study. <i>5th Joint Meeting of the Acoustical Society of America and the Acoustical Society of Japan.</i>Honolulu, Hawaii.
                     </li>
-                  <li>Chen, Shuwen, Xinran Ren, Richard Gananathan, Yanjiao Zhu, Sang-Im Kim, Peggy Pik Ki Mok. (2015).The production of English liquids by native Mandarin speakers. Ultrafest VII. The University of Hong Kong. Hong Kong. [poster]
+                  <li>Chen, Shuwen, Xinran Ren, Richard Gananathan, Yanjiao Zhu, Sang-Im Kim, Peggy Pik Ki Mok. (2015).The production of English liquids by native Mandarin speakers. <i>Ultrafest VII. The University of Hong Kong. Hong Kong. </i>
                     </li>
                   <li>Chen, Shuwen & Li Guo. (2015). Interaction of First and Second Language in Speech Accommodation: A pilot study of speech accommodation by speakers with different language backgrounds. Poster session at 2015 LSA summer institute. University of Chicago, Chicago.
                     </li>
-                  <li>Chen, Shuwen. & Peggy Pik Ki Mok. (2015). Interaction of English and Cantonese intonation in Hong Kong English: Data from read and spontaneous speech. The 1st International Conference on Prosodic Studies (ICPS 1). Tianjin. Oral presentation.
+                  <li>Chen, Shuwen. & Peggy Pik Ki Mok. (2015). Interaction of English and Cantonese intonation in Hong Kong English: Data from read and spontaneous speech. <i>The 1st International Conference on Prosodic Studies (ICPS 1).</i> Tianjin. Oral presentation.
                     </li>
                   <li>Chen, Shuwen & Peggy Mok. (2014). Mental Representation of Emotional Words in the Chinese-English Bilingual Lexicon. Outstanding Thesis Award presentation at the 2014 Annual Research Forum of the Linguistic Society of Hong Kong. Hong Kong: City University of Hong Kong, Hong Kong.
                     </li>
