--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -36,10 +36,10 @@
                 <div class="col-md-8 col-xs-12 col-sm-6"></div>
                 <div class="col-md-4 col-xs-6 col-sm-12">
                     <div class="row home_text">
-                        <div class="col-md-3"> <a href="./index.html"> Home</div>
-                        <div class="col-md-3"> <a href="./research.html"> Research</div>
-                        <div class="col-md-3"> <a href="./cv.html"> CV </div>
-                        <div class="col-md-3"> <a href="./teaching.html"> Teaching</div>
+                        <div class="col-md-3"> <a href="./index.html">  Home</a></div>
+                        <div class="col-md-3"> <a href="./research.html"> Research</a></div>
+                        <div class="col-md-3"> <a href="./cv.html"> CV </a></div>
+                        <div class="col-md-3"> <a href="./teaching.html"> Teaching</a></div>
                     </div>
                 </div>
             </div>    
