--- a/startbootstrap-clean-blog-gh-pages/teaching.html
+++ b/startbootstrap-clean-blog-gh-pages/teaching.html
@@ -13,66 +13,72 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
-     <!-- jQuery -->
-     <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.min.js"></script>
 
-     <!-- Bootstrap Core JavaScript -->
-     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
- 
-     <!-- Contact Form JavaScript -->
-     <script src="js/jqBootstrapValidation.js"></script>
-     <script src="js/contact_me.js"></script>
- 
-     <!-- Theme JavaScript -->
-     <script src="js/clean-blog.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/clean-blog.min.js"></script>
+    <link href="./css/main.css" rel="stylesheet">
 
 
 </head>
 
 <body>
     <div class="container-fluid">
-             <div class="row navTitle">
-                <div class="col-md-8 col-xs-12 col-sm-6"></div>
-                <div class="col-md-4 col-xs-6 col-sm-12">
-                    <div class="row home_text">
-                        <div class="col-md-3"> <a href="./index.html"> Home</div>
-                        <div class="col-md-3"> <a href="./research.html"> Research</div>
-                        <div class="col-md-3"> <a href="./cv.html"> CV </div>
-                        <div class="col-md-3"> <a href="/.teaching.html"> Teaching</div>
+        <div class="row navTitle">
+            <div class="col-md-8 col-xs-12 col-sm-6"></div>
+            <div class="col-md-4 col-xs-6 col-sm-12">
+                <div class="row home_text">
+                    <div class="col-md-3">
+                        <a href="./index.html"> Home </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="./research.html"> Research</a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="./cv.html"> CV </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="/.teaching.html"> Teaching</a>
                     </div>
                 </div>
-            </div>    
+            </div>
+        </div>
     </div>
-        
-   
-    <div align="justify", class="box">
-            <p class="mycontent"> 
-                <h1>Teaching Assistant</h1>
-                    <ul>   
-                      <li>Phonetics II (UG course) 2018 Spring</li>
-                      <li>Language testing (M.A. course) 2016 Spring</li>
-                      <li>Linguistic Research (M.A. course) 2015 Fall</li>
-                      <li>Teaching Chinese as a Second Language (M.A. course) 2015 Spring</li>
-                      <li>Foundations II: syntax and semantics (M.A. course) 2014 Fall</li>
-                    </ul>
 
-                <h1>Workshops</h1>
-                    <ul>   
-                      <li>Workshop on ultrasound imaging techniques and forced alignment in linguistic studies. <br>
-                          Department of Linguistics and Modern Languages, Chinese University of Hong Kong. June, 2017.</li>
-                      <li>Workshop on DMDX. LING1002 Phonetics II. <br>
-                          Department of Linguistics and Modern Languages, Chinese University of Hong Kong. April, 2014.</li>
-                    </ul>
+    <div align="justify" , class="box mycontent">
+        <h1>Teaching Assistant</h1>
+        <ul>
+            <li>Phonetics II (UG course) 2018 Spring</li>
+            <li>Language testing (M.A. course) 2016 Spring</li>
+            <li>Linguistic Research (M.A. course) 2015 Fall</li>
+            <li>Teaching Chinese as a Second Language (M.A. course) 2015 Spring</li>
+            <li>Foundations II: syntax and semantics (M.A. course) 2014 Fall</li>
+        </ul>
 
-                 <h1>Guest lecture</h1>
-                    <ul>
-                    <li>"Technology in L2 pronunciation instruction" at ENGE5620 Acquisition and Teaching of L2 Pronunciation, CUHK.</li>
-            </p>
-        <hr>
-       </div>
+        <h1>Workshops</h1>
+        <ul>
+            <li>Workshop on ultrasound imaging techniques and forced alignment in linguistic studies.
+                <br> Department of Linguistics and Modern Languages, Chinese University of Hong Kong. June, 2017.</li>
+            <li>Workshop on DMDX. LING1002 Phonetics II.
+                <br> Department of Linguistics and Modern Languages, Chinese University of Hong Kong. April, 2014.</li>
+        </ul>
 
-        
+        <h1>Guest lecture</h1>
+        <ul>
+            <li>"Technology in L2 pronunciation instruction" at ENGE5620 Acquisition and Teaching of L2 Pronunciation, CUHK.</li>
+
+            <hr>
+    </div>
+
+
 
 
 
