--- a/startbootstrap-clean-blog-gh-pages/cv.html
+++ b/startbootstrap-clean-blog-gh-pages/cv.html
@@ -36,10 +36,10 @@
                 <div class="col-md-8 col-xs-12 col-sm-6"></div>
                 <div class="col-md-4 col-xs-6 col-sm-12">
                     <div class="row home_text">
-                        <div class="col-md-3"> <a href="./index.html"> Home</div>
-                        <div class="col-md-3"> <a href="./research.html"> Research</div>
-                        <div class="col-md-3"> <a href="./cv.html"> CV </div>
-                        <div class="col-md-3"> <a href="./teaching.html"> Teaching</div>
+                        <div class="col-md-3"> <a href="./index.html"> Home </a></div>
+                        <div class="col-md-3"> <a href="./research.html"> Research</a></div>
+                        <div class="col-md-3"> <a href="./cv.html"> CV </a></div>
+                        <div class="col-md-3"> <a href="./teaching.html"> Teaching</a></div>
                     </div>
                 </div>
             </div>    
@@ -47,7 +47,7 @@
         
    
     <div align="justify", class="box">
-        <p class="mycontent"> 
+        <div class="mycontent"> 
             <h1>Education</h1>
                 <ul>
                   <li>2014-2018. Ph.D in Linguistics. The Chinese University of Hong Kong </li>
@@ -56,7 +56,7 @@
                   <li>2009-2013. B.A. in English language and literature. Beijing International Studies University</li>
                   <li><i>    (July 2015. LSA summer institute, Linguistics Society of America - University of Chicago)<i></li>
                 </ul>
-        </p>
+            </div>
     <hr>
    </div>
 
